--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -17,21 +17,22 @@
         </div>
         <div class="col-3 col-lg-3 mb-md-0 text-right d-flex justify-content-center flex-row">
 
-            <!-- Production (1/5) -->
+            <!-- Create UTub button -->
             <i id="createUTubBtn" class="green-clickable mx-1">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-plus-square-fill text-success"
+                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-plus-square-fill"
                     viewBox="0 0 16 16">
                     <path
                         d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm6.5 4.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3a.5.5 0 0 1 1 0" />
                 </svg>
             </i>
+
+            <!-- Delete UTub button -->
             <i id="deleteUTubBtn" class="mx-1" style="display:none">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-x-square-fill text-danger"
                     viewBox="0 0 16 16">
                     <path
                         d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm3.354 4.646L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 1 1 .708-.708" />
                 </svg></i>
-            <!-- Production (1/5) -->
         </div>
 
         <div class="deckContent">
@@ -49,11 +50,26 @@
         </div>
         <div class="col-3 col-lg-3 mb-md-0 text-right">
             <div class="d-flex justify-content-center flex-row">
-                <!-- Production (2/5) -->
-                <!-- <i class="bi bi-plus-square-fill fa-2x text-success mx-1" id="createTagButton" style="display:none"></i>
-                <i class="bi bi-pencil-square fa-2x text-warning mx-1" id="editTagButton" style="display:none"></i>
-                <i class="fa fa-check-square fa-2x text-success mx-1" id="submitTagButton" style="display:none"></i> -->
-                <!-- Production (2/5) -->
+                <!-- Creating disassociated tags is not yet implemented as of 12/21/2023. Not considered MVP functionality. -->
+                <!-- Create Tag button -->
+                <!-- <i id="createTagButton" class="green-clickable mx-1" style="display:none">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-plus-square-fill"
+                        viewBox="0 0 16 16">
+                        <path
+                            d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm6.5 4.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3a.5.5 0 0 1 1 0" />
+                    </svg>
+                </i> -->
+
+                <!-- Edit Tag button -->
+                <!-- <i id="editTagButton" class="mx-1" style="display: none; color: #545454">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                        class="bi bi-pencil-square" viewBox="0 0 16 16">
+                        <path
+                            d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+                        <path fill-rule="evenodd"
+                            d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z" />
+                    </svg>
+                </i> -->
             </div>
         </div>
         <div class="deckContent form-group">
@@ -69,20 +85,27 @@
 <div id="centerPanel" class="panel col-md-6">
     <div id="URLDeck" class="deck h-100 p-3" style="margin-bottom: -5px;">
         <div class="row justify-content-center mx-2">
+
+
             <div class="col-9 col-lg-9 mb-md-0 text-left">
-                <h2 id="URLDeckHeader" style="display: inline-block"></h2>
+                <!-- UTub name -->
+                <h2 id="URLDeckHeader"></h2>
+
+                <!-- Edit UTub name -->
                 <div class="createDiv" style="display: none">
                     <input type="text" id="editUTubName" class="userInput">
 
+                    <!-- Submit edit UTub name -->
                     <i class="submitEditUTubBtn green-clickable mx-1" type="button">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-check-square-fill  text-success" viewBox="0 0 16 16">
+                            class="bi bi-check-square-fill" viewBox="0 0 16 16">
                             <path
                                 d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm10.03 4.97a.75.75 0 0 1 .011 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.75.75 0 0 1 1.08-.022z" />
                         </svg>
                     </i>
                 </div>
 
+                <!-- Edit UTub button -->
                 <i class="editUTubBtn mx-1" style="display: none; color: #545454">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         class="bi bi-pencil-square" viewBox="0 0 16 16">
@@ -94,30 +117,27 @@
                 </i>
             </div>
             <div class="col-3 col-lg-3 mb-md-0 text-right">
-
-                <!-- Production (5/5) -->
+                <!-- Add URL button -->
                 <i id="addURLBtn" class="green-clickable mx-1" style="display: none;">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
-                        class="bi bi-plus-square-fill text-success" viewBox="0 0 16 16">
+                        class="bi bi-plus-square-fill" viewBox="0 0 16 16">
                         <path
                             d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm6.5 4.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3a.5.5 0 0 1 1 0" />
                     </svg>
                 </i>
-                <!-- Production (5/5) -->
             </div>
         </div>
+
         <div class="row justify-content-center mx-2">
-            <div class="col-9 col-lg-9 mb-md-0 text-left">
+            <div class="col-9 mb-md-0 text-left">
 
             </div>
-            <div class="col-3 col-lg-3 mb-md-0 text-right">
-
-                <!-- Production (5/5) -->
+            <div class="col-3 mb-md-0 text-right">
                 <button id="accessAllURLsBtn" class="btn btn-primary mx-1" style="display: none;">Access All URLs in
                     UTub</button>
-                <!-- Production (5/5) -->
             </div>
         </div>
+
         <div class="deckContent justify-content-center">
             <div id="listURLs">
                 <!-- Current selected UTub's URLs will be displayed here -->
@@ -144,6 +164,8 @@
             <h2 id="UTubDescriptionDeckHeader">UTub Description</h2>
         </div>
 
+        <!-- ICONS -->
+        <!-- Edit button -->
         <div class="col-3 col-lg-3 mb-md-0 text-right d-flex justify-content-center flex-row">
             <i class="mx-1 editUTubBtn" style="display: none; color: #545454">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
@@ -154,14 +176,17 @@
                         d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z" />
                 </svg>
             </i>
+            <!-- Submit edit button -->
             <i class="submitEditUTubBtn green-clickable mx-1" type="button" style="display: none">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                    class="bi bi-check-square-fill  text-success" viewBox="0 0 16 16">
+                    class="bi bi-check-square-fill" viewBox="0 0 16 16">
                     <path
                         d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm10.03 4.97a.75.75 0 0 1 .011 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.75.75 0 0 1 1.08-.022z" />
                 </svg>
             </i>
         </div>
+
+        <!-- UTub Descriptiion -->
         <p id="UTubDescription" style="display: inline-block"></p>
         <div class="createDiv" style="display: none">
             <textarea cols="40" rows="5" id="editUTubDescription" class="userInput"
@@ -181,7 +206,7 @@
             </input>
 
             <i id="addUserBtn" class="green-clickable mx-1">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-plus-square-fill text-success"
+                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-plus-square-fill"
                     viewBox="0 0 16 16">
                     <path
                         d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm6.5 4.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3a.5.5 0 0 1 1 0" />
