--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -11,7 +11,7 @@
 <div id="leftPanel" class="panel col-md-3">
 
     <!-- UPR LH Panel, UTubs -->
-    <div id="UTubDeck" class="deck row h-50 md-mb-1 p-3" style="display:flex /*margin-bottom: 5px;*/">
+    <div id="UTubDeck" class="deck row h-50 md-mb-1 p-3">
         <div class="col-9 col-lg-9 mb-md-0">
             <h2 id="UTubDeckHeader"></h2>
         </div>
