Just need a break. Broke everything again

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -194,13 +194,14 @@
         </div>
     </div>
 
-    <div id="UsersDeck" class="deck row h-50 md-mb-1 p-3" style="display: block; /*margin-bottom: 5px;*/">
+    <div id="UsersDeck" class="deck row h-50 md-mb-1 p-3">
         <h2 id="UserDeckHeader">Users</h2>
 
         <h5>Owner</h5>
         <span id="UTubOwner"></span>
 
-        <h5>Username</h5>
+        <h5></h5>
+        <ul id="UTubUsers"></ul>
         <div class="createDiv" style="display: none">
             <input type="text" id="UTubUsernameInput">
             </input>
