--- a/src/static/styles/app.css
+++ b/src/static/styles/app.css
@@ -7,8 +7,11 @@
     --borderColor: #343c3d;
     --deckHeaderGreen: #28a745; 
     --deckSelectionGreen: #60daaa; 
+
     --cardBackgroundColor: #282f2f;
     --UTubDescriptionColor: white;
+    
+    --spanRemoveColor: rgb(254, 115, 1);
 }
 
 /** HTML DOM Elements **/
@@ -172,7 +175,7 @@ svg {
 /* Tags */
 
 span.tag {
-    color: rgb(254, 115, 1);
+    color: var(--splashGreen);
     background: white;
     margin-left: 2px;
     margin-right: 2px;
@@ -202,6 +205,8 @@ span.tag:hover .tag-remove {
     outline: none;
     box-shadow: none;
 }
+
+/* URLs */
 
 .selected {
     border: 5px solid rgb(13, 255, 0);
@@ -237,6 +242,40 @@ span.tag:hover .tag-remove {
 .col-xl-3 {
     flex-shrink: 1;
     transition: all 250ms ease;
+}
+
+/* Users */
+
+span.user {
+    color: var(--spanRemoveColor);
+    background: white;
+    margin-left: 2px;
+    margin-right: 2px;
+    padding-left: 6px;
+    padding-right: 6px;
+    padding-top: 1px;
+    padding-bottom: 1px;
+    border-radius: 16px;
+    white-space: nowrap;
+}
+
+span.user:hover .user-remove {
+    display: inline-block;
+    line-height: 100%;
+    height: 100%;
+    font-size: 100%;
+}
+
+.user-remove {
+    padding: 0rem;
+    vertical-align: unset;
+    padding-left: 5px;
+    display: none;
+}
+
+.user-remove:focus {
+    outline: none;
+    box-shadow: none;
 }
 
 .close {
