--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -15,7 +15,7 @@
         <div class="col-9 col-lg-9 mb-md-0">
             <h2 id="UTubDeckHeader"></h2>
         </div>
-        <div class="col-3 col-lg-3 mb-md-0 text-right d-flex justify-content-center flex-row">
+        <div class="col-3 col-lg-3 mb-md-0 text-right justify-content-center flex-row">
 
             <!-- Create UTub button -->
             <i id="createUTubBtn" class="green-clickable mx-1">
