--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -11,12 +11,11 @@
 <div id="leftPanel" class="panel col-md-3">
 
     <!-- UPR LH Panel, UTubs -->
-    <div id="UTubDeck" class="deck row h-50 md-mb-1 p-3">
-        <div class="col-9 col-lg-9 mb-md-0">
+    <div id="UTubDeck" class="deck row h-50 p-3">
+        <div class="col-6 col-lg-6">
             <h2 id="UTubDeckHeader"></h2>
         </div>
-        <div class="col-3 col-lg-3 mb-md-0 text-right justify-content-center flex-row">
-
+        <div class="col-6 col-lg-6 float-right">
             <!-- Create UTub button -->
             <i id="createUTubBtn" class="green-clickable mx-1">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-plus-square-fill"
@@ -45,10 +44,10 @@
 
     <!-- LWR LH Panel, Tags -->
     <div id="TagDeck" class="deck row h-50 p-3">
-        <div class="col-9 col-lg-9 mb-md-0">
+        <div class="col-9 col-lg-9">
             <h2 id="TagDeckHeader">No UTub Selected</h2>
         </div>
-        <div class="col-3 col-lg-3 mb-md-0 text-right">
+        <div class="col-3 col-lg-3 text-right">
             <div class="d-flex justify-content-center flex-row">
                 <!-- Creating disassociated tags is not yet implemented as of 12/21/2023. Not considered MVP functionality. -->
                 <!-- Create Tag button -->
@@ -83,11 +82,11 @@
 
 <!-- Center Panel, URLs -->
 <div id="centerPanel" class="panel col-md-6">
-    <div id="URLDeck" class="deck h-100 p-3" style="margin-bottom: -5px;">
+    <div id="URLDeck" class="deck p-3">
         <div class="row justify-content-center mx-2">
 
 
-            <div class="col-9 col-lg-9 mb-md-0 text-left">
+            <div class="col-9 col-lg-9 text-left">
                 <!-- UTub name -->
                 <h2 id="URLDeckHeader"></h2>
 
@@ -116,7 +115,7 @@
                     </svg>
                 </i>
             </div>
-            <div class="col-3 col-lg-3 mb-md-0 text-right">
+            <div class="col-3 col-lg-3 text-right">
                 <!-- Add URL button -->
                 <i id="addURLBtn" class="green-clickable mx-1" style="display: none;">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
@@ -129,10 +128,10 @@
         </div>
 
         <div class="row justify-content-center mx-2">
-            <div class="col-9 mb-md-0 text-left">
+            <div class="col-9 text-left">
 
             </div>
-            <div class="col-3 mb-md-0 text-right">
+            <div class="col-3 text-right">
                 <button id="accessAllURLsBtn" class="btn btn-primary mx-1" style="display: none;">Access All URLs in
                     UTub</button>
             </div>
@@ -159,14 +158,14 @@
 
 <div id="rightPanel" class="panel col-md-3">
 
-    <div id="UTubDescriptionDeck" class="deck row h-50 p-3">
-        <div class="col-9 col-lg-9 mb-md-0">
+    <div id="UTubDescriptionDeck" class="deck row p-3">
+        <div class="col-9 col-lg-9">
             <h2 id="UTubDescriptionDeckHeader">UTub Description</h2>
         </div>
 
         <!-- ICONS -->
         <!-- Edit button -->
-        <div class="col-3 col-lg-3 mb-md-0 text-right d-flex justify-content-center flex-row">
+        <div class="col-3 col-lg-3 text-right d-flex justify-content-center flex-row">
             <i class="mx-1 editUTubBtn" style="display: none; color: #545454">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                     class="bi bi-pencil-square" viewBox="0 0 16 16">
@@ -194,7 +193,7 @@
         </div>
     </div>
 
-    <div id="UsersDeck" class="deck row h-50 md-mb-1 p-3">
+    <div id="UsersDeck" class="deck row p-3">
         <h2 id="UserDeckHeader">Users</h2>
 
         <h5>Owner</h5>
