--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -69,7 +69,8 @@
     <title>URLS4IRL</title>
 </head>
 
-<body class="d-flex flex-column vh-100">
+<body class="vh-100"> 
+    <!-- d-flex flex-column -->
     <!-- Navigation Bar -->
     <nav id="mainNavbar" class="navbar navbar-expand-md navbar-dark bg-dark py-0 fixed-top">
         <a class="navbar-brand navbar-start" href="#">URLS4IRL</a>
