--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -11,7 +11,7 @@
 <div id="leftPanel" class="panel col-md-3">
 
     <!-- UPR LH Panel, UTubs -->
-    <div id="UTubDeck" class="deck row h-50 p-3">
+    <div id="UTubDeck" class="deck h-50 p-3">
         <div class="col-6 col-lg-6">
             <h2 id="UTubDeckHeader"></h2>
         </div>
@@ -43,7 +43,7 @@
 
 
     <!-- LWR LH Panel, Tags -->
-    <div id="TagDeck" class="deck row h-50 p-3">
+    <div id="TagDeck" class="deck h-50 p-3">
         <div class="col-9 col-lg-9">
             <h2 id="TagDeckHeader">No UTub Selected</h2>
         </div>
@@ -82,9 +82,8 @@
 
 <!-- Center Panel, URLs -->
 <div id="centerPanel" class="panel col-md-6">
-    <div id="URLDeck" class="deck p-3">
+    <div id="URLDeck" class="deck h-100 p-3">
         <div class="row justify-content-center mx-2">
-
 
             <div class="col-9 col-lg-9 text-left">
                 <!-- UTub name -->
@@ -158,7 +157,7 @@
 
 <div id="rightPanel" class="panel col-md-3">
 
-    <div id="UTubDescriptionDeck" class="deck row p-3">
+    <div id="UTubDescriptionDeck" class="deck h-50 p-3">
         <div class="col-9 col-lg-9">
             <h2 id="UTubDescriptionDeckHeader">UTub Description</h2>
         </div>
@@ -193,7 +192,7 @@
         </div>
     </div>
 
-    <div id="UsersDeck" class="deck row p-3">
+    <div id="UsersDeck" class="deck h-50 p-3">
         <h2 id="UserDeckHeader">Users</h2>
 
         <h5>Owner</h5>
