--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -7,15 +7,24 @@
 </script>
 <!-- 12/17 DP this is visible to the user? Ok? -->
 
-<!-- Left Side Panel -->
+<!-- Left Panel -->
+
 <div id="leftPanel" class="panel col-md-3">
 
-    <!-- UPR LH Panel, UTubs -->
-    <div id="UTubDeck" class="deck h-50 p-3">
+    <!-- UTubs -->
+    <div id="UTubDeck" class="deck row h-50 p-3">
         <div class="col-6 col-lg-6">
             <h2 id="UTubDeckHeader"></h2>
         </div>
-        <div class="col-6 col-lg-6 float-right">
+        <div class="col-6 col-lg-6 d-flex flex-row-reverse">
+            <!-- Delete UTub button -->
+            <i id="deleteUTubBtn" class="mx-1" style="display:none">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-x-square-fill text-danger"
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm3.354 4.646L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 1 1 .708-.708" />
+                </svg></i>
+
             <!-- Create UTub button -->
             <i id="createUTubBtn" class="green-clickable mx-1">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-plus-square-fill"
@@ -24,14 +33,6 @@
                         d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm6.5 4.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3a.5.5 0 0 1 1 0" />
                 </svg>
             </i>
-
-            <!-- Delete UTub button -->
-            <i id="deleteUTubBtn" class="mx-1" style="display:none">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-x-square-fill text-danger"
-                    viewBox="0 0 16 16">
-                    <path
-                        d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm3.354 4.646L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 1 1 .708-.708" />
-                </svg></i>
         </div>
 
         <div class="deckContent">
@@ -42,8 +43,8 @@
     </div>
 
 
-    <!-- LWR LH Panel, Tags -->
-    <div id="TagDeck" class="deck h-50 p-3">
+    <!-- Tags -->
+    <div id="TagDeck" class="deck row h-50 p-3">
         <div class="col-9 col-lg-9">
             <h2 id="TagDeckHeader">No UTub Selected</h2>
         </div>
@@ -80,12 +81,15 @@
     </div>
 </div>
 
-<!-- Center Panel, URLs -->
-<div id="centerPanel" class="panel col-md-6">
-    <div id="URLDeck" class="deck h-100 p-3">
-        <div class="row justify-content-center mx-2">
+<!-- Left Panel -->
 
-            <div class="col-9 col-lg-9 text-left">
+<!-- Center Panel -->
+
+<div id="centerPanel" class="panel col-md-6">
+    <div id="URLDeck" class="deck row h-100 p-3">
+        <div class="row justify-content-center">
+
+            <div class="col-9 col-lg-9" style="display:flex">
                 <!-- UTub name -->
                 <h2 id="URLDeckHeader"></h2>
 
@@ -94,7 +98,7 @@
                     <input type="text" id="editUTubName" class="userInput">
 
                     <!-- Submit edit UTub name -->
-                    <i class="submitEditUTubBtn green-clickable mx-1" type="button">
+                    <i class="submitEditUTubBtn green-clickable mx-1 py-2">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-check-square-fill" viewBox="0 0 16 16">
                             <path
@@ -104,7 +108,7 @@
                 </div>
 
                 <!-- Edit UTub button -->
-                <i class="editUTubBtn mx-1" style="display: none; color: #545454">
+                <i class="editUTubBtn mx-1 py-2" style="display: none; color: #545454">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         class="bi bi-pencil-square" viewBox="0 0 16 16">
                         <path
@@ -114,7 +118,8 @@
                     </svg>
                 </i>
             </div>
-            <div class="col-3 col-lg-3 text-right">
+
+            <div class="col-3 col-lg-3 d-flex flex-row-reverse">
                 <!-- Add URL button -->
                 <i id="addURLBtn" class="green-clickable mx-1" style="display: none;">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
@@ -126,17 +131,7 @@
             </div>
         </div>
 
-        <div class="row justify-content-center mx-2">
-            <div class="col-9 text-left">
-
-            </div>
-            <div class="col-3 text-right">
-                <button id="accessAllURLsBtn" class="btn btn-primary mx-1" style="display: none;">Access All URLs in
-                    UTub</button>
-            </div>
-        </div>
-
-        <div class="deckContent justify-content-center">
+        <div class="row deckContent justify-content-center">
             <div id="listURLs">
                 <!-- Current selected UTub's URLs will be displayed here -->
                 <div id="UPRRow" class="row list-content justify-content-center board-list">
@@ -150,45 +145,56 @@
                 </div>
             </div>
         </div>
+
+        <!-- Access all URLs button -->
+        <div class="row justify-content-center">
+            <button id="accessAllURLsBtn" class="btn btn-primary " style="display: none; width: 25%">Access All URLs in
+                UTub</button>
+        </div>
     </div>
 </div>
 
-<!-- Right Side Panel -->
+<!-- Center Panel -->
+
+<!-- Right Panel -->
 
 <div id="rightPanel" class="panel col-md-3">
 
-    <div id="UTubDescriptionDeck" class="deck h-50 p-3">
-        <div class="col-9 col-lg-9">
-            <h2 id="UTubDescriptionDeckHeader">UTub Description</h2>
+    <div id="UTubDescriptionDeck" class="deck row h-50 p-3">
+        <div class="row">
+            <div class="col-9 col-lg-9" style="display:flex">
+                <h2 id="UTubDescriptionDeckHeader">UTub Description</h2>
+            </div>
+
+            <div class="col-3 col-lg-3 d-flex flex-row-reverse">
+                <!-- Edit button -->
+                <i class="editUTubBtn mx-1 py-2" style="display: none; color: #545454">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                        class="bi bi-pencil-square" viewBox="0 0 16 16">
+                        <path
+                            d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+                        <path fill-rule="evenodd"
+                            d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z" />
+                    </svg>
+                </i>
+                <!-- Submit edit button -->
+                <i class="submitEditUTubBtn green-clickable mx-1 py-2" style="display: none">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-check-square-fill" viewBox="0 0 16 16">
+                        <path
+                            d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm10.03 4.97a.75.75 0 0 1 .011 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.75.75 0 0 1 1.08-.022z" />
+                    </svg>
+                </i>
+            </div>
         </div>
 
-        <!-- ICONS -->
-        <!-- Edit button -->
-        <div class="col-3 col-lg-3 text-right d-flex justify-content-center flex-row">
-            <i class="mx-1 editUTubBtn" style="display: none; color: #545454">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
-                    class="bi bi-pencil-square" viewBox="0 0 16 16">
-                    <path
-                        d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
-                    <path fill-rule="evenodd"
-                        d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z" />
-                </svg>
-            </i>
-            <!-- Submit edit button -->
-            <i class="submitEditUTubBtn green-clickable mx-1" type="button" style="display: none">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                    class="bi bi-check-square-fill" viewBox="0 0 16 16">
-                    <path
-                        d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm10.03 4.97a.75.75 0 0 1 .011 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.75.75 0 0 1 1.08-.022z" />
-                </svg>
-            </i>
-        </div>
-
-        <!-- UTub Descriptiion -->
-        <p id="UTubDescription" style="display: inline-block"></p>
-        <div class="createDiv" style="display: none">
-            <textarea cols="40" rows="5" id="editUTubDescription" class="userInput"
-                placeholder="Describe the contents of your UTub (optional)"></textarea>
+        <div class="row">
+            <!-- UTub Descriptiion -->
+            <p id="UTubDescription" style="display: inline-block"></p>
+            <div class="createDiv" style="display: none">
+                <textarea cols="40" rows="5" id="editUTubDescription" class="userInput"
+                    placeholder="Describe the contents of your UTub (optional)"></textarea>
+            </div>
         </div>
     </div>
 
@@ -222,6 +228,7 @@
     </div>
 </div>
 
+<!-- Right Panel -->
 
 <!-- Home Page JS -->
 <script src="{{ url_for('static', filename='scripts/utils.js') }}"></script>
