User input field display behavior implemented

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -198,18 +198,13 @@
         </div>
     </div>
 
-    <div id="UsersDeck" class="deck h-50 p-3">
-        <h2 id="UserDeckHeader">Users</h2>
 
-        <h5>Owner</h5>
-        <span id="UTubOwner"></span>
-
-        <h5></h5>
-        <ul id="UTubUsers"></ul>
-        <div class="createDiv" style="display: none">
-            <input type="text" id="UTubUsernameInput">
-            </input>
-
+    <div id="UsersDeck" class="deck row h-50 p-3">
+        <div class="col-6 col-lg-6">
+            <h2 id="UserDeckHeader">Users</h2>
+        </div>
+        <div class="col-6 col-lg-6 d-flex flex-row-reverse">
+            <!-- Add user button -->
             <i id="addUserBtn" class="green-clickable mx-1">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-plus-square-fill"
                     viewBox="0 0 16 16">
@@ -217,13 +212,14 @@
                         d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm6.5 4.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3a.5.5 0 0 1 1 0" />
                 </svg>
             </i>
+        </div>
 
-            <i id="removeUser" class="mx-1">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-x-square-fill text-danger"
-                    viewBox="0 0 16 16">
-                    <path
-                        d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm3.354 4.646L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 1 1 .708-.708" />
-                </svg></i>
+        <div class="deckContent">
+            <h5>Owner</h5>
+            <span id="UTubOwner"></span>
+            <form id="listUsers">
+                <!-- Users -->
+            </form>
         </div>
     </div>
 </div>
