User functionality complete

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -215,8 +215,9 @@
         </div>
 
         <div class="deckContent">
-            <h5>Owner</h5>
+            <h5><u><b>Owner</b></u></h5>
             <span id="UTubOwner"></span>
+            <h5><u><b>Users</b></u></h5>
             <form id="listUsers">
                 <!-- Users -->
             </form>
