Add tests for updating URL title route

--- a/src/templates/error_pages/404_response.html
+++ b/src/templates/error_pages/404_response.html
@@ -47,7 +47,7 @@
             <h1>URLS4IRL</h1>
         </article>
         <article class="content">
-            <h2>404 - Invalid Request</h2>
+            <h2>{{ text }}</h2>
             <section>
                 <p>We're on it! Something went wrong, but our team of gerbils is working hard to fix it.</p>
                 <p>Meanwhile, please use the back button on your browser to return to the website.</p>
