--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -72,7 +72,9 @@
 </head>
 
 <body class="vh-100"> 
-    <!-- d-flex flex-column -->
+    <!-- Includes jinja2 generated routes globally for use by frontend -->
+    {% include '_routes.html' %}
+
     <!-- Navigation Bar -->
     <nav id="mainNavbar" class="navbar navbar-expand-md navbar-dark bg-dark py-0 fixed-top">
         <a class="navbar-brand navbar-start" href="#">
