Separate navbar into components and modal bases into their own folder

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -3,7 +3,7 @@
 
 <!-- Backend load of UTub JSON data -->
 <script type="text/javascript">
-    var UTubs = JSON.parse('{{utubs_for_this_user|tojson|safe}}');
+    const UTubs = JSON.parse('{{utubs_for_this_user|tojson|safe}}');
 </script>
 <!-- 12/17 DP this is visible to the user? Ok? -->
 
